Finished the tests